--- a/_material-overrides.scss
+++ b/_material-overrides.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/theming';
+
 // global material styles
 mat-form-field {
   width: 100%;
@@ -5,4 +7,11 @@ mat-form-field {
   &.ng-invalid.ng-touched {
     margin-bottom: 10px;
   }
+}
+
+
+// Mat-buttons
+button.mat-google-btn {
+  background-color: green;
+  color: #fff;
 }
