--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -73,7 +73,8 @@ button.sign-in-google-btn {
 			font-size: 48px;
 
 			&:hover {
-				filter: dropShadow(50);
+				transform: scale(1.1);
+
 			}
 		}
 	}
