--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,4 +8,4 @@
 		<mat-icon>power_settings_new</mat-icon>
 	</button>
 </mat-toolbar>
-<pre>{{(user | async)?.displayName}}</pre>
+<pre>{{(user | async) | json}}</pre>
