--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,37 @@
 .spacer {
 	flex: 1 1 auto;
 }
+
+.user-profile {
+	border-radius: 50px;
+	overflow: hidden;
+}
+
+.app-container {
+	width: 100%;
+	height: 100%;
+	background: transparent;
+}
+
+.app-sidenav-content{
+
+	background: #E5E5FE;
+	.side-nav-container {
+		display: flex;
+		height: 100%;
+		width: 100%;
+		align-items: center;
+		justify-content: center;
+	}
+}
+
+.app-sidenav {
+	padding-top: 20px;
+	width: 300px;
+}
+
+
+mat-drawer {
+	background: #271C46;
+
+}
