--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -3,3 +3,6 @@ $color-grey: #757575;
 $color-light-grey: #9F9F9F;
 $color-lighter-grey: #DEDEDE;
 $color-lightest-grey: #BBBBBB;
+
+
+$color-text-white: #f5f5f5
