--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -1,3 +1,10 @@
 @import "./variables";
 @import "material-overrides";
-//@import "_bootstrap-custom.css";
+
+
+//@import "node_modules/bootstrap/scss/variables";
+//@import "node_modules/bootstrap/scss/mixins";
+//@import "node_modules/bootstrap/scss/reboot";
+//@import "node_modules/bootstrap/scss/grid";
+@import "node_modules/bootstrap/scss/bootstrap-grid";
+//@import "node_modules/bootstrap/scss/bootstrap-utilities";
