1) break-point-observer added 2) tool-bar added in home-comp 3) side-nav responsive to resolution 4) flexboxgrid2 added in dependencies
5/17/2021-By: Yousaf Raza

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -37,11 +37,10 @@
 				<span class="mat-small">Or Sign Up Using</span>
 				<div class="providers">
 					<i (click)="googleSignIn()" class="fab fa-google"></i>
-					<i class="fab fa-facebook"></i>
+					<i (click)="facebookSignIn()" class="fab fa-facebook"></i>
 					<i class="fab fa-github"></i>
 				</div>
 			</div>
-<!--			{{((this.userService.auth?.user | async) | json)}}-->
 		</mat-card-footer>
 
 	</form>
