--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,5 +29,31 @@ pre {
 	padding: 10px;
 	margin: 5px;
 	border-radius: 10px;
-	overflow: hidden;
+	overflow: scroll;
 }
+
+
+// Scroll-Bar styles
+/* width */
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px $color-text-white;
+	border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: transparentize($color-secondary-light, .8);
+	border-radius: 10px;
+	transition: 1s ease-in-out;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: $color-secondary-light;
+}
+
