1) tool-bar adjusted 2) fav.ico updated 3) splash Screen added 4) logout action added 5) chat item UI refactored 6) And Some refactoring

--- a/src/app/home/chats/chat-item/chat-item.component.html
+++ b/src/app/home/chats/chat-item/chat-item.component.html
@@ -3,10 +3,10 @@
 		<app-profile-image [online]="false"></app-profile-image>
 	</div>
 	<div class="column-2">
-		<span class="heading">Yousaf</span>
-		<span class="time-stamp">8 min ago</span>
+		<span class="heading">{{name}}</span>
+		<span class="time-stamp">{{lastSeen}}</span>
 		<br>
-		<span class="sub-heading">{{'This is a demo chat and it is here to test your skills' | slice: 0 : 30 }}...</span>
+		<span [matTooltip]="lastMessage" [matTooltipPosition]="'above'" matTooltipShowDelay="1000" class="sub-heading">{{lastMessage}}</span>
 	</div>
 	<div class="column-3">
 		<span class="blue-badge"></span>
