--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,41 @@
-<mat-progress-bar mode="indeterminate" *ngIf="authGuard.loader$ | async"></mat-progress-bar>
+<ng-container *ngIf="authGuard.loader$ | async">
+	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+	<div class="root-container">
+		<img src="/assets/images/logo-dark.png" alt="Flick Chat" class="logo"/>
+	</div>
+	<style>
+		html, body, .app-root {
+			height: 100%;
+		}
+
+		body {
+			background: whitesmoke;
+			font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+			font-display: fallback;
+			font-size: 14px;
+			overflow: hidden;
+		}
+
+		.root-container {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 100%;
+		}
+
+		.logo {
+			width: 30%;
+			max-width: 100%;
+			min-width: 250px;
+			animation: 1s spin-loading ease-in-out alternate infinite;
+		}
+
+		@keyframes spin-loading {
+			100% {
+				transform: scale(1.3);
+			}
+		}
+	</style>
+
+</ng-container>
 <router-outlet></router-outlet>
