--- a/src/app/home/chats/chat-item/chat-item.component.scss
+++ b/src/app/home/chats/chat-item/chat-item.component.scss
@@ -1,7 +1,8 @@
 @import "src/app/styles/main";
 
 .wrap {
-	display: flex;
+	display: grid;
+	grid-template-columns: 50px calc(100% - 50px);
 	width: 100%;
 	overflow: hidden;
 	padding: 10px 5px;
@@ -10,13 +11,15 @@
 
 
 	&:hover {
-		background: $color-primary-dark;
+		background: $color-darker-gray;
 	}
 
 	.column-2 {
 		flex: 1;
 		padding-left: 15px;
 		padding-top: 5px;
+		text-overflow: ellipsis;
+		overflow: hidden;
 
 		.heading {
 			font-size: 16px;
