--- a/src/app/home/chats/chats.component.html
+++ b/src/app/home/chats/chats.component.html
@@ -1,1 +1,3 @@
-<app-chat-item *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]"></app-chat-item>
+<app-chat-item
+	*ngFor="let item of [1,1,1,1]"
+></app-chat-item>
