1) logger service created ( in progress ) 2) code formatted 3) Material Styles added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,8 +44,7 @@
 		</mat-toolbar>
 		<div class="side-nav-container">
 
-			<!--<h1>IN-Production X_X</h1>
-			<pre>{{user | json}}</pre>-->
+			<pre>{{user | json}}</pre>
 		</div>
 	</mat-drawer-content>
 </mat-drawer-container>
