--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,14 +22,8 @@ body {
 
 
 pre {
-	display: block;
-	background: $color-grey;
-	color: white;
-	border: 1px solid darken($color-bg-grey, 20);
+	background: whitesmoke;
 	padding: 10px;
-	margin: 5px;
-	border-radius: 10px;
-	overflow: scroll;
 }
 
 
