--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,27 @@
-<mat-card>
+<mat-card *ngIf="layout === LayoutOptions.SignIn">
 	<form class="form" [formGroup]="loginForm">
 		<mat-card-title>Login</mat-card-title>
 		<mat-card-subtitle>Enter the credentials</mat-card-subtitle>
 		<mat-card-content>
 
-			<mat-form-field class="example-full-width">
+			<mat-form-field>
 				<mat-label>Email/User Name</mat-label>
-				<input matInput placeholder="Email/User Name" [formControl]="email" value="">
-				<mat-error *ngIf="email.hasError('required')">
+				<input matInput placeholder="Email/User Name" [formControl]="fc_email" value="">
+				<mat-error *ngIf="fc_email.hasError('required')">
 					Email is <strong>required</strong>
 				</mat-error>
-				<mat-error *ngIf="email.hasError('email')">
+				<mat-error *ngIf="fc_email.hasError('email')">
 					<strong>Invalid</strong> Email address
 				</mat-error>
 			</mat-form-field>
 			<br>
-			<mat-form-field class="example-full-width">
+			<mat-form-field>
 				<mat-label>Password</mat-label>
-				<input type="password" matInput placeholder="Password" [formControl]="password" value="">
-				<mat-error *ngIf="password.hasError('required')">
+				<input type="password" matInput placeholder="Password" [formControl]="fc_password" value="">
+				<mat-error *ngIf="fc_password.hasError('required')">
 					Password is <strong>required</strong>
 				</mat-error>
-				<mat-error *ngIf="password.hasError('minlength')">
+				<mat-error *ngIf="fc_password.hasError('minlength')">
 					<strong>Minimum</strong> password of length 8
 				</mat-error>
 			</mat-form-field>
@@ -30,7 +30,8 @@
 		</mat-card-content>
 		<mat-card-actions align="right">
 			<button color="primary" mat-raised-button>Login</button>
-			<div class="sign-up-subtext">Don't have an account? <span>Sign up</span></div>
+			<div class="sign-up-subtext">Don't have an account? <span (click)="changeLayout(LayoutOptions.SignUp);">Sign up</span>
+			</div>
 		</mat-card-actions>
 		<mat-card-footer>
 			<div class="sign-up-providers">
@@ -42,5 +43,79 @@
 				</div>
 			</div>
 		</mat-card-footer>
+	</form>
+</mat-card>
+
+
+<mat-card *ngIf="layout === LayoutOptions.SignUp">
+	<mat-progress-bar class="stick-top" *ngIf="showLoading" mode="determinate" [value]="percentageValue"></mat-progress-bar>
+	<div *ngIf="showLoading" class="loading-cover">
+		<button class="cancel-btn" (click)="onCancelUpload()" mat-icon-button><mat-icon>cancel</mat-icon></button>
+	</div>
+	<form class="form" [formGroup]="signUpForm">
+		<mat-card-title>SignUp</mat-card-title>
+		<mat-card-subtitle>Enter User Info</mat-card-subtitle>
+		<app-image-upload width="200" height="200"
+						  [imageUrl]="photoUrl"
+						  [disabled]="signUpForm.disabled"
+						  (eventPhotoUrl)="onFileRefReceived($event);"
+						  (eventUploadTask)="onUploadTaskReceived($event)"
+		></app-image-upload>
+		<mat-card-content>
+
+			<div class="row">
+				<mat-form-field class="col-sm-12  col-lg-6 ">
+					<mat-label class="">First Name</mat-label>
+					<input matInput required placeholder="First Name" [formControl]="fc_firstName" value="">
+					<mat-error *ngIf="fc_firstName.hasError('required')">
+						First Name is <strong>required</strong>
+					</mat-error>
+				</mat-form-field>
+				<mat-form-field class="col-sm-12 col-lg-6">
+					<mat-label>Last Name</mat-label>
+					<input matInput placeholder="Last Name" [formControl]="fc_lastName" value="">
+				</mat-form-field>
+			</div>
+
+			<div class="row">
+				<mat-form-field class="col-xs-12 col-lg-6">
+					<mat-label>Email</mat-label>
+					<input matInput required placeholder="Email/User Name" [formControl]="fc_email" value="">
+					<mat-error *ngIf="fc_email.hasError('required')">
+						Email is <strong>required</strong>
+					</mat-error>
+					<mat-error *ngIf="fc_email.hasError('email')">
+						<strong>Invalid</strong> Email address
+					</mat-error>
+				</mat-form-field>
+
+				<mat-form-field class="col-sm-12 col-lg-6">
+					<mat-label>Password</mat-label>
+					<input type="password" matInput required placeholder="Password" [formControl]="fc_password"
+						   value="">
+					<mat-error *ngIf="fc_password.hasError('required')">
+						Password is <strong>required</strong>
+					</mat-error>
+					<mat-error *ngIf="fc_password.hasError('minlength')">
+						<strong>Minimum</strong> password of length 8
+					</mat-error>
+				</mat-form-field>
+			</div>
+		</mat-card-content>
+		<mat-card-actions align="right">
+			<button color="primary" (click)="signUp()" mat-raised-button>SignUp</button>
+			<div class="sign-up-subtext">Already have an account, <span (click)="changeLayout(LayoutOptions.SignIn);">Login</span>
+			</div>
+		</mat-card-actions>
+		<!--		<mat-card-footer>-->
+		<!--			<div class="sign-up-providers">-->
+		<!--				<span class="mat-small">Or Sign Up Using</span>-->
+		<!--				<div class="providers">-->
+		<!--					<i (click)="googleSignIn()" class="fab fa-google"></i>-->
+		<!--					<i (click)="facebookSignIn()" class="fab fa-facebook"></i>-->
+		<!--					<i class="fab fa-github"></i>-->
+		<!--				</div>-->
+		<!--			</div>-->
+		<!--		</mat-card-footer>-->
 	</form>
 </mat-card>
